# tvm_mobilenetv2_arm_intel_deploy

./: README.md  tvm_install_and_RPC.md
cpu_cpp_deploy_mobilenetv2/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  mobilenetv2  mobilenetv2.py  server_deploy.cpp  test_demo.py  tvm_deploy_gpu_sample.cpp  tvm_opencl_inference.cpp  tvm_runtime_pack.cc
cpu_cpp_deploy_mobilenetv2/include/: dlpack  dmlc  tvm
cpu_cpp_deploy_mobilenetv2/model/: deploy_graph.json
tvm_android_deploy_mobilenetv2/: README.md  build.gradle
tvm_android_deploy_mobilenetv2/app/: build.gradle  download-models.gradle
tvm_android_deploy_mobilenetv2/app/src/main/java/ml/dmlc/tvm/android/demo/: MainActivity.java  MainActivity_Bak.java
tvm_android_deploy_mobilenetv2/app/src/main/res/values/: strings.xml
tvm_android_deploy_mobilenetv2/dev_tools/: tvmdemo.keystore
tvm_android_deploy_mobilenetv2/gradle/wrapper/: gradle-wrapper.properties
